feat: add startup scripts and VSCode tasks
Add scripts for automated dev environment setup:
- start-conduit.sh: Main script to start both frontend and backend in tmux
- setup.js: Creates test user and articles if they don't exist
- VSCode tasks for easy integration with editor
- Package scripts for setup and dev environment

--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "dev": "concurrently --names 'Node,Vite' -c 'green,blue' 'npm run dev -w backend' 'npm run dev -w frontend'",
     "sqlz": "npx -w backend sequelize-cli",
     "start": "npm run build -w frontend && npm run start -w backend",
-    "test": "vitest"
+    "test": "vitest",
+    "setup": "node ./scripts/setup.js",
+    "start-dev": "./scripts/start-conduit.sh"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.2.0",
     "concurrently": "^7.6.0",
     "vitest": "^0.29.7"
+  },
+  "dependencies": {
+    "axios": "^1.6.2"
   }
 }
