--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "markdown-to-jsx": "^7.2.0",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.9.0",
